refactor ui and autocomplete

--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,7 @@
   <title>React Weather App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCH2Qlc-eVHj3V-cwyRNtWdEgieuObzAhM&libraries=places"></script>
 </head>
 <body>
   <div class="container">
